--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "indii",
+  "name": "interactive-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@remix-run/router": "^1.7.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "babel-loader": "^10.0.0",
+    "events": "^3.3.0",
+    "framer-motion": "^10.18.0",
+    "html-webpack-plugin": "^5.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "^5.0.1",
+    "source-map-loader": "^4.0.2",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.99.9",
+    "webpack-dev-server": "^4.15.2"
   },
   "scripts": {
     "start": "react-scripts start",
